# docs-ai

./: pyproject.toml
docsai/: doc_main.py  main.py
